# multi-dimpy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  ruff.toml
.cspell/: development-dictionary.txt  dimpy-dictionary.txt  latex-dictionary.txt  python-dictionary.txt
.github/workflows/: CI.yml  publish.yml
docs/: CONTRIBUTING.md  index.md
docs/javascripts/: readthedocs.js
docs/stylesheets/: katex-spacing.css
docs/theory/: README.md  additional-considerations.md
src/dimpy/: __init__.py  basis.py  dimension_vector.py  dimensioned_array.py  exceptions.py  ufuncs.py
tests/: test_basis.py  test_dimension_vector.py  test_dimensioned_array.py  test_ufuncs_dimensioned_array.py
theory/: README.md  additional-considerations.md
